[package]
name = "hamming-dict"
version = "0.5.0"
edition = "2018"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
license = "MIT"
description = "Generates codeword dictionaries for hamming-space BoW algorithms"
repository = "https://github.com/rust-cv/hamming-dict"
documentation = "https://docs.rs/hamming-dict/"
keywords = ["bow", "dictionary", "codeword", "hamming"]
categories = ["no-std", "computer-vision"]
readme = "README.md"

[features]
default = ["alloc"]
alloc = []

[dependencies]
bitarray = { version = "0.9.1", default-features = false }
rand = { version = "0.8.4", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
